--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: samplepackage
 Title: My first package for stat302 project3
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: 
     person(given = "Yuxin",
            family = "Huang",
@@ -12,3 +12,6 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
