--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,11 @@ export(f_to_c)
 export(my_lm)
 export(my_pow)
 export(my_t.test)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,model.response)
+importFrom(stats,na.omit)
+importFrom(stats,predict)
+importFrom(stats,pt)
+importFrom(stats,sd)
 importFrom(tibble,tibble)
